# seg_ros

./: CMakeLists.txt  README.md  package.xml
configs/top_down/hrnet/: td-hm_hrnet-w32_8xb64-210e_coco-256x192.py
demo/: bag1.txt  bag2.txt
images/pose/json/: pose_1.json  pose_10.json  pose_100.json  pose_101.json  pose_102.json  pose_103.json  pose_104.json  pose_105.json  pose_106.json  pose_107.json  pose_108.json  pose_109.json  pose_11.json  pose_110.json  pose_111.json  pose_112.json  pose_113.json  pose_114.json  pose_115.json  pose_116.json  pose_117.json  pose_118.json  pose_119.json  pose_12.json  pose_120.json  pose_121.json  pose_122.json  pose_123.json  pose_124.json  pose_125.json  pose_126.json  pose_13.json  pose_14.json  pose_15.json  pose_16.json  pose_17.json  pose_18.json  pose_19.json  pose_2.json  pose_20.json  (+86 more)
images/pose/keypoints/: keypoints_1.pkl  keypoints_10.pkl  keypoints_11.pkl  keypoints_12.pkl  keypoints_13.pkl  keypoints_14.pkl  keypoints_15.pkl  keypoints_16.pkl  keypoints_17.pkl  keypoints_18.pkl  keypoints_19.pkl  keypoints_2.pkl  keypoints_3.pkl  keypoints_4.pkl  keypoints_5.pkl  keypoints_6.pkl  keypoints_7.pkl  keypoints_8.pkl  keypoints_9.pkl
images/pose/scores/: scores_1.pkl  scores_10.pkl  scores_11.pkl  scores_12.pkl  scores_13.pkl  scores_14.pkl  scores_15.pkl  scores_16.pkl  scores_17.pkl  scores_18.pkl  scores_19.pkl  scores_2.pkl  scores_3.pkl  scores_4.pkl  scores_5.pkl  scores_6.pkl  scores_7.pkl  scores_8.pkl  scores_9.pkl
launch/: exp.launch  eye_on_base.launch  human_model.launch
msg/: KeypointsWithScores.msg
scripts/: pose_pub.py  pose_record.py  pose_tensorrt.py  pose_test.py  save_pose.py  save_seg.py  seg_mask.py  seg_test.py
src/: cam_cali.cpp  cam_cali2.cpp  human_model.cpp  off_line.cpp  on_line.cpp  save_eve.cpp  save_images.cpp  tf_sim.cpp  tf_sub.cpp  truncator.cpp
